wzquresh first commit added wzquresh activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
         <string name="jmwalter">Joshua Walters</string>   <!-- jmwalter -->
         <string name="ntwhitfi">Nathan Whitfield</string>   <!-- ntwhitfi -->
         <string name="amyork">Andrew York</string>   <!-- amyork -->
+        <string name="wzquresh">Waqas Qureshi</string>   <!-- wzquresh -->
 
         <string name="action_settings">Settings</string>
 </resources>
